--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,16 @@ before_install:
 script:
 #  - cd front
   - docker run front npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "frontend"
+  env: "Frontend-env"
+  bucket_name: elasticbeanstalk-us-west-2-261554425720
+  bucket_path: "frontend"
+  on:
+    branch: master
+  access_key_id:  $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: "$AWS_SECRET_KEY"
