added expose port

--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -7,5 +7,8 @@ RUN npm run build
 RUN rm -rf ./node_modules
 
 FROM nginx:alpine
+
+# This does not do anythong automatically locally .. but is as instruction for ...
+EXPOSE 80
 COPY --from=builder /app/build /usr/share/nginx/html
 
